--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -8,26 +8,47 @@
            class="brand-image img-circle elevation-3"
            style="opacity: .8">
       <span class="brand-text font-weight-light"><b>{{profile.name}}</b><font size=2>viewer</font></span> -->
-    <svg class="logo-sidebar" version="1.0" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-      y="0px" viewBox="0 0 1080 934" enable-background="new 0 0 1080 934" xml:space="preserve">
+    <svg class='logo-sidebar' version="1.0" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+      y="0px" viewBox="0 0 834 252" enable-background="new 0 0 834 252" xml:space="preserve">
       <g>
-        <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="735.4095" y1="912.702" x2="47.8066"
-          y2="34.2601">
-          <stop offset="4.348686e-03" style="stop-color:#F8DBDB" />
-          <stop offset="0.5" style="stop-color:#F0B4B3" />
-          <stop offset="1" style="stop-color:#B08D8D" />
-        </linearGradient>
-        <rect x="41.2" y="24.3" fill="url(#SVGID_1_)" width="693.4" height="889" />
+        <g>
+          <path fill="#FFFFFF" d="M72.7,194.1h62v36.5H25.3V36.4h47.3V194.1z" />
+        </g>
+        <g>
+          <path fill="#FFFFFF" d="M160.8,52.9c-5.3-4.9-7.9-10.9-7.9-18.1c0-7.4,2.6-13.5,7.9-18.4c5.3-4.9,12-7.3,20.3-7.3
+         c8.1,0,14.8,2.4,20.1,7.3c5.3,4.9,7.9,11,7.9,18.4c0,7.2-2.6,13.2-7.9,18.1c-5.3,4.9-11.9,7.3-20.1,7.3
+         C172.8,60.2,166,57.7,160.8,52.9z M204.6,76.2v154.4h-47.3V76.2H204.6z" />
+        </g>
+        <g>
+          <path fill="#FFFFFF" d="M376.3,92.1c10.8,11.7,16.2,27.8,16.2,48.3v90.2h-47v-83.8c0-10.3-2.7-18.4-8-24.1
+         c-5.4-5.7-12.5-8.6-21.6-8.6c-9,0-16.2,2.9-21.6,8.6c-5.4,5.7-8,13.7-8,24.1v83.8h-47.3V76.2h47.3v20.5
+         c4.8-6.8,11.2-12.2,19.4-16.2c8.1-4,17.2-5.9,27.4-5.9C351.1,74.6,365.5,80.4,376.3,92.1z" />
+        </g>
         <g>
           <path fill="#FFFFFF"
-            d="M1004.6,569.7c4.7,0,9.3,0.7,13.6,2c4.3,1.3,8,3.3,11.3,6c3.2,2.7,5.8,6.2,7.7,10.4
-         c1.9,4.2,2.9,9.3,2.9,15.2c0,3.2-0.5,6.4-1.6,9.8s-2.7,6.4-4.9,9.2c-2.2,2.8-5.2,5-8.8,6.8c-3.6,1.8-8,2.7-13.2,2.7
-         c-2.8,0-5.6-0.4-8.5-1.1c-2.9-0.7-5.6-2-8-3.8c-2.4-1.8-4.5-4.2-6.3-7.2c-1.8-3-2.9-6.9-3.3-11.7c-4.1,0-8.2,1.4-12.4,4.1
-         c-4.2,2.7-8,6.1-11.7,10.1c-3.6,4-6.8,8.3-9.6,13s-4.7,8.8-5.9,12.5v66.1c0,2,0,4.4-0.1,7.1c-0.1,2.8-0.2,5.7-0.3,8.9
-         c-0.1,3.2-0.3,6.4-0.5,9.8c-0.2,3.4-0.4,6.6-0.7,9.6l26.3-1.2v30.9H864.3v-26.3c5.7,0,10.1-0.9,13.4-2.6c3.2-1.7,5.6-4.2,7.2-7.3
-         c1.6-3.2,2.6-7,3-11.4c0.4-4.4,0.6-9.3,0.6-14.7v-68.3c0-4.9,0.1-10.3,0.3-16.3c0.2-6,0.6-12,1.3-18.1l-28.5,1.2v-30.5
-         c9.4,0,17.6-0.4,24.8-1.2c7.2-0.8,13.3-1.8,18.4-3c5.1-1.2,9.2-2.5,12.3-3.9c3.1-1.4,5.4-2.8,6.8-4.1h20l1.8,34.8h0.6
-         c2.6-3.6,5.8-7.5,9.6-11.9c3.8-4.4,8.1-8.4,13.1-12.2c4.9-3.8,10.4-6.9,16.3-9.5C991.1,571,997.6,569.7,1004.6,569.7z" />
+            d="M425,111.4c6-12,14.2-21.2,24.5-27.7c10.3-6.5,21.9-9.7,34.6-9.7c10.1,0,19.4,2.1,27.8,6.4
+         c8.4,4.2,15,10,19.8,17.2V25.9H579v204.8h-47.3v-22.1c-4.4,7.4-10.7,13.3-19,17.7c-8.2,4.4-17.8,6.6-28.6,6.6
+         c-12.7,0-24.3-3.3-34.6-9.8c-10.3-6.5-18.5-15.9-24.5-27.9c-6-12.1-9-26.1-9-41.9C416,137.3,419,123.4,425,111.4z M521.9,125.5
+         c-6.5-6.8-14.5-10.2-23.9-10.2s-17.4,3.4-23.9,10.1c-6.5,6.7-9.8,16-9.8,27.8c0,11.8,3.3,21.2,9.8,28.1
+         c6.5,6.9,14.5,10.4,23.9,10.4s17.4-3.4,23.9-10.2c6.5-6.8,9.8-16.1,9.8-27.9C531.7,141.6,528.4,132.3,521.9,125.5z" />
+        </g>
+        <g>
+          <path fill="#FFFFFF"
+            d="M612.9,111.4c6-12,14.2-21.2,24.5-27.7c10.3-6.5,21.9-9.7,34.6-9.7c10.9,0,20.4,2.2,28.6,6.6
+         c8.2,4.4,14.5,10.2,19,17.4V76.2h47.3v154.4h-47.3v-21.9c-4.6,7.2-11,13-19.2,17.4c-8.2,4.4-17.8,6.6-28.6,6.6
+         c-12.5,0-24-3.3-34.3-9.8c-10.3-6.5-18.5-15.9-24.5-27.9c-6-12.1-9-26.1-9-41.9C603.9,137.3,606.9,123.4,612.9,111.4z
+          M709.7,125.5c-6.5-6.8-14.5-10.2-23.9-10.2s-17.4,3.4-23.9,10.1c-6.5,6.7-9.8,16-9.8,27.8c0,11.8,3.3,21.2,9.8,28.1
+         c6.5,6.9,14.5,10.4,23.9,10.4s17.4-3.4,23.9-10.2c6.5-6.8,9.8-16.1,9.8-27.9C719.5,141.6,716.3,132.3,709.7,125.5z" />
+        </g>
+      </g>
+      <g>
+        <g>
+          <path fill="#FFFFFF" d="M809.9,203.9c2.4,1.3,4.2,3.1,5.5,5.5c1.3,2.3,2,5,2,8c0,3-0.7,5.6-2,8c-1.3,2.4-3.1,4.2-5.5,5.5
+         c-2.4,1.3-5,2-8,2c-3,0-5.7-0.7-8-2c-2.4-1.3-4.2-3.1-5.5-5.5c-1.3-2.4-2-5-2-8c0-3,0.7-5.7,2-8c1.3-2.3,3.2-4.2,5.5-5.5
+         c2.4-1.3,5-2,8-2C804.9,202,807.5,202.6,809.9,203.9z M810.1,225.7c2-2.1,3.1-4.9,3.1-8.3s-1-6.2-3.1-8.3c-2-2.1-4.8-3.1-8.2-3.1
+         c-3.4,0-6.2,1-8.2,3.1c-2,2.1-3.1,4.9-3.1,8.3s1,6.2,3.1,8.3c2,2.1,4.8,3.1,8.2,3.1C805.3,228.8,808,227.8,810.1,225.7z
+          M808,217.2c-0.5,0.8-1.2,1.3-2,1.7l3.6,5.9h-5.9l-2.9-5.3h-0.4v5.3h-5.1v-15.1h7.9c1.7,0,3,0.5,4,1.4c1,0.9,1.5,2.1,1.5,3.6
+         C808.8,215.6,808.5,216.4,808,217.2z M800.4,216h2c0.8,0,1.1-0.4,1.1-1.1c0-0.7-0.4-1-1.1-1h-2V216z" />
         </g>
       </g>
     </svg>
@@ -85,7 +106,7 @@
         <!-- Sección de compras -->
         <li class="nav-header">COMPRAS</li>
         <li class="nav-item pl-1">
-          <a href="#" class="nav-link">
+          <a href="{% url 'Purchases:supplier_list' %}" class="nav-link">
             <i class="fas fa-truck"></i>
             <p class="pl-1"> Proveedores</p>
           </a>
