--- a/templates/includes/footbar.html
+++ b/templates/includes/footbar.html
@@ -2,7 +2,7 @@
     <div class="float-right d-none d-sm-block">
         Versión 1.0.0
     </div>
-    <strong>Copyright &copy; 2021. <a href="https://www.linkedin.com/in/juan-david-herrera/">Rochetie</a></strong>, Todos los derechos
+    <strong>Copyright &copy; 2021. <a href="https://www.linkedin.com/in/juan-david-herrera/">Linda®</a></strong>, Todos los derechos
     reservados.
 
 </div>
